// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders columns with offset 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -1.5rem;
}

.c1 {
  -webkit-flex: 0 0 8.3333%;
  -ms-flex: 0 0 8.3333%;
  flex: 0 0 8.3333%;
  padding-right: 1.5rem;
}

.c3 {
  -webkit-flex: 0 0 8.3333%;
  -ms-flex: 0 0 8.3333%;
  flex: 0 0 8.3333%;
  margin-left: 83.3333%;
  padding-right: 1.5rem;
}

.c2 {
  box-sizing: border-box;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1 c2"
  >
    Column 1
  </div>
  <div
    class="c3 c2"
  >
    Column 2
  </div>
</div>
`;

exports[`Grid renders columns with span 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -1.5rem;
}

.c1 {
  -webkit-flex: 0 0 33.3333%;
  -ms-flex: 0 0 33.3333%;
  flex: 0 0 33.3333%;
  padding-right: 1.5rem;
}

.c3 {
  -webkit-flex: 0 0 66.6667%;
  -ms-flex: 0 0 66.6667%;
  flex: 0 0 66.6667%;
  padding-right: 1.5rem;
}

.c2 {
  box-sizing: border-box;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1 c2"
  >
    Column 1
  </div>
  <div
    class="c3 c2"
  >
    Column 2
  </div>
</div>
`;

exports[`Grid renders without props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -1.5rem;
}

.c1 {
  -webkit-flex: 0 0 8.3333%;
  -ms-flex: 0 0 8.3333%;
  flex: 0 0 8.3333%;
  padding-right: 1.5rem;
}

.c2 {
  box-sizing: border-box;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1 c2"
  >
    Column 1
  </div>
  <div
    class="c1 c2"
  >
    Column 2
  </div>
  <div
    class="c1 c2"
  >
    Column 3
  </div>
</div>
`;
